# catapult

./: CMakeLists.txt  Makefile
.github/workflows/: build.yml
src/: binary.c  binary.h  catapult.c  crc32.c  crc32.h  main.c  pul.c  pul.h
tests/: 5.szs  config.bmg  config.txt  output.pul  output.txt  test1.sh
